--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+      <groupId>org.hornetq.examples.core</groupId>
+      <artifactId>core-examples</artifactId>
+      <version>2.4.0.Final</version>
+   </parent>
+
   <groupId>com.elishalai</groupId>
   <artifactId>hornetq-tests</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>HornetQ Tests</name>
-  <url>http://maven.apache.org</url>
 
   <dependencies>
     <dependency>
@@ -27,6 +32,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
+      <version>4.1.12.Final</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.javaee</groupId>
@@ -41,6 +47,7 @@
     <dependency>
       <groupId>org.jboss.spec.javax.jms</groupId>
       <artifactId>jboss-jms-api_2.0_spec</artifactId>
+      <version>1.0.0.Final</version>
     </dependency>
   </dependencies>
 
@@ -100,10 +107,12 @@
             </executions>
             <configuration>
               <mainClass>com.elishalai.Client</mainClass>
+              <!--
                 <arguments>
                   <argument>host</argument>
                   <argument>port</argument>
                 </arguments>
+              -->
             </configuration>
           </plugin>
         </plugins>
