--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,40 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>producer</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.hornetq</groupId>
+          <artifactId>hornetq-core-client</artifactId>
+          <version>2.4.0.Final</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.1</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <mainClass>com.elishalai.Producer</mainClass>
+                <arguments>
+                  <argument>localhost</argument>
+                  <argument>5445</argument>
+                  <argument>10</argument>
+                </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
