--- a/pom.xml
+++ b/pom.xml
@@ -63,42 +63,7 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>client</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.hornetq</groupId>
-          <artifactId>hornetq-core-client</artifactId>
-          <version>2.4.0.Final</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.1</version>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <mainClass>com.elishalai.Client</mainClass>
-              <!--
-                <arguments>
-                  <argument>host</argument>
-                  <argument>port</argument>
-                </arguments>
-              -->
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+
     <profile>
       <id>producer</id>
       <dependencies>
@@ -124,11 +89,47 @@
             </executions>
             <configuration>
               <mainClass>com.elishalai.Producer</mainClass>
-                <arguments>
-                  <argument>localhost</argument>
-                  <argument>5445</argument>
-                  <argument>10</argument>
-                </arguments>
+              <arguments>
+                <argument>localhost</argument>
+                <argument>5445</argument>
+                <argument>10</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>consumer</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.hornetq</groupId>
+          <artifactId>hornetq-core-client</artifactId>
+          <version>2.4.0.Final</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.1</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <mainClass>com.elishalai.Consumer</mainClass>
+              <arguments>
+                <argument>localhost</argument>
+                <argument>5445</argument>
+                <argument>10</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
