--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
-            <version>1.1</version>
+            <version>1.6.0</version>
             <executions>
               <execution>
                 <phase>package</phase>
@@ -90,10 +90,12 @@
             <configuration>
               <mainClass>com.elishalai.Producer</mainClass>
               <arguments>
-                <argument>localhost</argument>
+                <argument>192.168.1.115</argument>
                 <argument>5445</argument>
                 <argument>2</argument>
+                <argument>4096</argument>
               </arguments>
+              <cleanupDaemonThreads>false</cleanupDaemonThreads>
             </configuration>
           </plugin>
         </plugins>
@@ -114,7 +116,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
-            <version>1.1</version>
+            <version>1.6.0</version>
             <executions>
               <execution>
                 <phase>package</phase>
@@ -126,10 +128,11 @@
             <configuration>
               <mainClass>com.elishalai.Consumer</mainClass>
               <arguments>
-                <argument>localhost</argument>
+                <argument>192.168.1.115</argument>
                 <argument>5445</argument>
                 <argument>2</argument>
               </arguments>
+              <cleanupDaemonThreads>false</cleanupDaemonThreads>
             </configuration>
           </plugin>
         </plugins>
