--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
                 <argument>5445</argument>
                 <!-- Number of Messages -->
                 <argument>2</argument>
-                <!-- Message Size -->
+                <!-- Message Size (In Bytes) -->
                 <argument>4096</argument>
               </arguments>
               <cleanupDaemonThreads>false</cleanupDaemonThreads>
