--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
               </execution>
             </executions>
             <configuration>
-              <mainClass>com.elishalai.Producer</mainClass>
+              <mainClass>com.elishalai.ProducerClient</mainClass>
               <arguments>
                 <!-- Server Address -->
                 <argument>localhost</argument>
@@ -142,7 +142,7 @@
               </execution>
             </executions>
             <configuration>
-              <mainClass>com.elishalai.Consumer</mainClass>
+              <mainClass>com.elishalai.ConsumerClient</mainClass>
               <arguments>
                 <!-- Server Address -->
                 <argument>localhost</argument>
